Make hash function a function parameter. Add some documentation features.

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -35,6 +35,11 @@ NUM_PROC_THREADS = 0
 EXTRACT_LOCAL_CLASSES = NO
 
 
+EXTRACT_ALL = YES
+HAVE_DOT = YES
+
+CALL_GRAPH = YES
+CALLER_GRAPH = YES
 
 HIDE_IN_BODY_DOCS = YES
 
