--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,19 +60,19 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}/build/test
           GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
-      - name: Run benchmark
-        if: success() || failure()
-        run: |
-          cd ${GITHUB_WORKSPACE}/build/test
-          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./benchmark
-      - name: Save benchmake results
-        if: success() || failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: /__w/data_deduplication_service/data_deduplication_service/build/test
-          if-no-files-found: warn
-          include-hidden-files: true
+#      - name: Run benchmark
+#        if: success() || failure()
+#        run: |
+#          cd ${GITHUB_WORKSPACE}/build/test
+#          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./benchmark
+#      - name: Save benchmake results
+#        if: success() || failure()
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: build
+#          path: /__w/data_deduplication_service/data_deduplication_service/build/test
+#          if-no-files-found: warn
+#          include-hidden-files: true
       - name: Save log files
         if: success() || failure()
         uses: actions/upload-artifact@v4
