--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,6 @@ on:
       - include/**
       - test/**
       - CMakeLists.txt
-env:
-    copyPath: /home/app
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -37,19 +35,11 @@ jobs:
           path: ./src
       - name: Build and set logging directory
         run: |
-          mkdir -p ${copyPath}
-          mkdir -p ${copyPath}/conf
-          mkdir -p ${copyPath}/logs
           
-          cd src
           wget https://github.com/AlexanderMeynik/data_deduplication_service/releases/download/fixture/testDirectories.zip
           unzip -q testDirectories.zip
           rm testDirectories.zip
-          cd ..
 
-          cp -r ${GITHUB_WORKSPACE}/src/ ${copyPath}/src/
-          cp -r ${GITHUB_WORKSPACE}/src/conf/ ${copyPath}/conf
-          cd ${copyPath}
           mkdir build && cd build
           
           cmake -G Ninja -DCMAKE_C_COMPILER:PATH="/usr/bin/clang" \
@@ -61,29 +51,29 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: /home/app/build
+          path: /__w/data_deduplication_service/data_deduplication_service/build
           if-no-files-found: warn
           include-hidden-files: true
       - name: Run clockArrayTests
         run: |
-          cd ${copyPath}/build/test
+          cd ${GITHUB_WORKSPACE}/build/test
           ./clock_array_tests
       - name: Run fileServiceTests
         if: success() || failure()
         run: |
-          cd ${copyPath}/build/test
-          GLOG_log_dir=${copyPath}/logs ./FileServiceTests
+          cd ${GITHUB_WORKSPACE}/build/test
+          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
       - name: Run benchmark
         if: success() || failure()
         run: |
-          cd ${copyPath}/build/test
-          GLOG_log_dir=${copyPath}/logs ./benchmark
+          cd ${GITHUB_WORKSPACE}/build/test
+          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./benchmark
       - name: Save benchmake results
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: bench
-          path: /home/app/build/test
+          path: /__w/data_deduplication_service/data_deduplication_service/build/test
           if-no-files-found: warn
           include-hidden-files: true
       - name: Save log files
@@ -91,6 +81,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: logs
-          path: /home/app/logs
+          path: /__w/data_deduplication_service/data_deduplication_service/logs
           if-no-files-found: warn
           include-hidden-files: true
