Attempt to separate benchmark workflow from main one. Switch column positions for some files for more consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
           cpus: '1'
           memory: 4G
   service:
-    image: builder
+    image: alexandermey/data-deduplication-service:enviroment_sl
     volumes:
       - .:/usr/application/src
       - build-data:/usr/application/build
