--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,13 +1,7 @@
 name: Build and Test
 
 on:
-  push:
-    paths:
-      - .github/workflows/ci.yml
-      - src/**
-      - include/**
-      - test/**
-      - CMakeLists.txt
+  workflow_dispatch:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -34,7 +28,7 @@ jobs:
           submodules: true
           path: ./src
       - name: Build and set logging directory
-        run: |  
+        run: |
           mkdir logs
           cp -r src/conf/ conf/
           
@@ -48,23 +42,19 @@ jobs:
           -DCMAKE_CXX_COMPILER:PATH="/usr/bin/clang++" \
           ../src/
           ninja
-      - name: Save build
+      - name: Run benchmark
+        if: success() || failure()
+        run: |
+          cd ${GITHUB_WORKSPACE}/build/test
+          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./benchmark
+      - name: Save benchmake results
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: build
-          path: /__w/data_deduplication_service/data_deduplication_service/build
+          name: bench
+          path: /__w/data_deduplication_service/data_deduplication_service/build/test
           if-no-files-found: warn
           include-hidden-files: true
-      - name: Run clockArrayTests
-        run: |
-          cd ${GITHUB_WORKSPACE}/build/test
-          ./clock_array_tests
-      - name: Run fileServiceTests
-        if: success() || failure()
-        run: |
-          cd ${GITHUB_WORKSPACE}/build/test
-          GLOG_log_dir=${GITHUB_WORKSPACE}/logs ./FileServiceTests
       - name: Save log files
         if: success() || failure()
         uses: actions/upload-artifact@v4
