--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -3,7 +3,7 @@ name: Run benchmark
 on:
   workflow_dispatch:
 jobs:
-  build-and-test:
+  build-and-run:
     runs-on: ubuntu-latest
     services:
       postgres:
