Fix some bugs with getDirectories. Minor fixes for deprecated messages. Transform array comparator to functor. Chnages some class names.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(data_deduplication_service)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-SET( CMAKE_CXX_FLAGS_DEBUG  "-g -std=gnu++2b")
+SET( CMAKE_CXX_FLAGS_DEBUG  "-g")
 SET( CMAKE_CXX_FLAGS_RELEASE  "-O3 -ffast-math -DNDEBUG -march=native -fpic -ftree-vectorize")
-SET( CMAKE_CXX_FLAGS  " -std=gnu++2b -fcolor-diagnostics")
+SET( CMAKE_CXX_FLAGS  " -std=gnu++2b")
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
