Add some directory tests. Resize images at pages. Add test descriptions to doxygen. Insert missing images.

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -46,7 +46,7 @@ HIDE_IN_BODY_DOCS = YES
 
 SHOW_HEADERFILE = NO
 
-INPUT = ../../src ../../include ../../lib md
+INPUT = ../../src ../../include ../../lib ../../test md
 EXCLUDE =  ../../include/expected.hpp
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
